--- a/worlds/outer_wilds/shared_static_logic/items.jsonc
+++ b/worlds/outer_wilds/shared_static_logic/items.jsonc
@@ -5,7 +5,7 @@
 
     { "code": 1734473681, "name": "Launch Codes", "type": "progression" },
 
-//    { "code": 1734473732, "name": "Spacesuit", "type": "progression" },
+    { "code": 1734473732, "name": "Spacesuit", "type": "progression" },
     { "code": 1734473682, "name": "Translator", "type": "progression" },
     { "code": 1734473683, "name": "Signalscope", "type": "progression" },
     { "code": 1734473684, "name": "Scout", "type": "progression" },
