correct suitless logic for Esker's fuel tank

--- a/worlds/outer_wilds/shared_static_logic/locations.jsonc
+++ b/worlds/outer_wilds/shared_static_logic/locations.jsonc
@@ -133,7 +133,7 @@
     },
     {
         "address": 1085038335, "name": "AR: Esker's House Fuel Tank",
-        "region": "Space", "requires": []
+        "region": "Space", "requires": [ { "item": "Spacesuit" } ]
     },
 
     // Brittle Hollow
