--- a/worlds/outer_wilds/shared_static_logic/items.jsonc
+++ b/worlds/outer_wilds/shared_static_logic/items.jsonc
@@ -6,7 +6,13 @@
     { "code": 1734473681, "name": "Launch Codes", "type": "progression" },
 
     { "code": 1734473732, "name": "Spacesuit", "type": "progression" },
-    { "category": "base", "code": 1734473682, "name": "Translator", "type": "progression" },
+    { "category": "base", "split_translator": false, "code": 1734473682, "name": "Translator", "type": "progression" },
+    { "category": "base", "split_translator": true, "code": 1734473746, "name": "Translator (Hourglass Twins)", "type": "progression" },
+    { "category": "base", "split_translator": true, "code": 1734473747, "name": "Translator (Timber Hearth)", "type": "progression" },
+    { "category": "base", "split_translator": true, "code": 1734473748, "name": "Translator (Brittle Hollow)", "type": "progression" },
+    { "category": "base", "split_translator": true, "code": 1734473749, "name": "Translator (Giant's Deep)", "type": "progression" },
+    { "category": "base", "split_translator": true, "code": 1734473750, "name": "Translator (Dark Bramble)", "type": "progression" },
+    { "category": "base", "split_translator": true, "code": 1734473751, "name": "Translator (Other)", "type": "progression" },
     { "category": "base", "code": 1734473683, "name": "Signalscope", "type": "progression" },
     { "code": 1734473684, "name": "Scout", "type": "progression" },
     { "code": 1734473685, "name": "Ghost Matter Wavelength", "type": "progression" },
